--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap --config awesome.config.js"
   },
   "dependencies": {
     "next": "14.2.7",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.12"
