--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap --config awesome.config.js"
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "next": "14.2.7",
